--- a/RatesView.xcodeproj/xcshareddata/xcschemes/CryptoView.xcscheme
+++ b/RatesView.xcodeproj/xcshareddata/xcschemes/CryptoView.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "645B7CF423FC1E3F007B7EC1"
-               BuildableName = "CryptoView 1.0.app"
+               BuildableName = "CryptoView 0.95b.app"
                BlueprintName = "CryptoView"
                ReferencedContainer = "container:RatesView.xcodeproj">
             </BuildableReference>
@@ -45,11 +45,17 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "645B7CF423FC1E3F007B7EC1"
-            BuildableName = "CryptoView 1.0.app"
+            BuildableName = "CryptoView 0.95b.app"
             BlueprintName = "CryptoView"
             ReferencedContainer = "container:RatesView.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -62,7 +68,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "645B7CF423FC1E3F007B7EC1"
-            BuildableName = "CryptoView 1.0.app"
+            BuildableName = "CryptoView 0.95b.app"
             BlueprintName = "CryptoView"
             ReferencedContainer = "container:RatesView.xcodeproj">
          </BuildableReference>
