Created CW branch for the version 1.1

--- a/RatesView.xcodeproj/xcshareddata/xcschemes/SmartConverter.xcscheme
+++ b/RatesView.xcodeproj/xcshareddata/xcschemes/SmartConverter.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "64184184243D28A4007C1A2F"
-               BuildableName = "SmartConverter 1.1.app"
+               BuildableName = "SmartConverter.app"
                BlueprintName = "SmartConverter"
                ReferencedContainer = "container:RatesView.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "64184184243D28A4007C1A2F"
-            BuildableName = "SmartConverter 1.1.app"
+            BuildableName = "SmartConverter.app"
             BlueprintName = "SmartConverter"
             ReferencedContainer = "container:RatesView.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "64184184243D28A4007C1A2F"
-            BuildableName = "SmartConverter 1.1.app"
+            BuildableName = "SmartConverter.app"
             BlueprintName = "SmartConverter"
             ReferencedContainer = "container:RatesView.xcodeproj">
          </BuildableReference>
